[package]
name = "peng_trainer"
version = "0.1.0"
edition = "2024"

[dependencies]
avian3d = "0.5.0"
bevy = { version = "0.18.1", features = ["dev", "free_camera"] }
bevy-inspector-egui = "0.36.0"
bevy_rts_camera = "0.13.0"
bevy_trenchbroom = { version = "0.12.0", features = ["physics-integration"] }
bevy_trenchbroom_avian = "0.12.0"
random_color = "1.1.0"

# # Enable a small amount of optimization in the dev profile.
# [profile.dev]
# opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
