[package]
name = "peng_trainer"
version = "0.1.0"
edition = "2024"

[dependencies.bevy]
version = "0.18.1"
features = ["hotpatching", "dev", "free_camera"]

[dependencies]
avian3d = "0.5.0"
bevy_trenchbroom = { version = "0.12.0", features = ["physics-integration"] }
bevy_trenchbroom_avian = "0.12.0"
bevy-inspector-egui = "0.36.0"
bevy_rts_camera = "0.13.0"

tracing = "0.1.0"
fastrand = "2.3.0"
random_color = "1.1.0"
# smart-default = "0.7.1"

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
